# ipo-checker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  ipo_checker.py  ipo_checker.py.bak  list.txt.example  pyproject.toml  setup.py
.github/workflows/: ci.yaml
ipo_checker/: main.py
tests/: test_main.py
