[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
force-exclude = '''
/(
   ignored                     # files in this dir are ignored
)\
'''

[tool.mypy]
ignore_missing_imports = true
